# dansk-laeremateriale

./: .gitignore  README.md  extract_chapters.py  extract_pdf.py  parse.py  pyproject.toml  run.py  sentence_tokenizer.py  setup.py  translate.py
